--- a/index.html
+++ b/index.html
@@ -40,5 +40,9 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
       alt="A purple and pink cake"
       height="500"
     />
+    <h4>
+      <a href="./public/about.html">About Me</a>
+      <a href="./public/contact.html">Contact Me</a>
+    </h4>
   </body>
 </html>
